payment-wallet-k8s/payment-wallet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-wallet
  labels:
    app: payment-wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-wallet
  template:
    metadata:
      labels:
        app: payment-wallet
    spec:
      containers:
        - name: payment-wallet
          image: 444068948302.dkr.ecr.us-east-2.amazonaws.com/payment-wallet-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
