payment-wallet-k8s/payment-wallet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-wallet-service
spec:
  selector:
    app: payment-wallet
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
